--- a/main.html
+++ b/main.html
@@ -4,9 +4,16 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>song</title>
 </head>
 
 <body>
+	<div>
+		<h1>Favourite song</h1>
+		<p>
+			My current favourite song is <a href="https://www.youtube.com/results?search_query=heeriye+song"> heeriye.</a> by Arijit singh
+		</p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
